# frequency-cipher-cracker

./: .gitignore  ACCURACY_REPORT.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml
benchmarks/: ultimate_accuracy_test.py
freqcrack/: cli.py
freqcrack/core/: affine.py  atbash.py  autokey.py  baconian.py  beaufort.py  caesar.py  columnar.py  detect.py  frequency.py  keyword.py  playfair.py  polybius.py  railfence.py  rot.py  scoring.py  substitution.py  text.py  vigenere.py
samples/: sample_affine.txt  sample_autokey.txt  sample_baconian.txt  sample_beaufort.txt  sample_caesar.txt  sample_columnar.txt  sample_keyword.txt  sample_polybius.txt  sample_railfence.txt  sample_rot13.txt  sample_rot47.txt  sample_substitution.txt  sample_substitution_long.txt  sample_vigenere.txt
tests/: test_core.py
